--- a/app/frontend/src/stylesheets/attendances.scss
+++ b/app/frontend/src/stylesheets/attendances.scss
@@ -1,12 +1,22 @@
 @import "./application";
 
 body{
-  font-size: 15px
+  font-size: 15px;
+  background-color: #cdf0f7;
 }
 h1{
   font-size: 25px;
 }
 
+.row_0 {
+  background-color: #f5c6cb;
+}
+.row_1,.row_2,.row_3,.row_4,.row_5{
+  background-color: #f7ebc7;
+}
+.row_6 {
+  background-color: #bee5eb;
+}
 .search{
   margin-top: 50px;
 }
