--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -7,22 +7,24 @@
           <%= form_with url: attendance_path(@current_user.id), method: :get do |form| %>
             <%= select_tag('select_year', 
                 options_for_select(show_years_map ,
-                        class: 'opt_year',
+                        class:'opt_year',
                         selected: @select_date.year.to_i),
-                :onchange => 'this.form.submit();')%>年
+                :onchange => 'this.form.submit();',
+                class: 'form-control-sm' )%>年
             <%= select_tag('select_month',
                 options_for_select((1..12),
                         class:'opt_month',
                         selected: @select_date.month.to_i),
-                :onchange => 'this.form.submit();')%>月
+                :onchange => 'this.form.submit();',
+                class: 'form-control-sm')%>月
           <% end %>
         </div>
       </div>
     </div>
     <div class='search-rightend'>
       <div class='inputtime'>
-        <%= button_tag('出勤', name: 'syukkin') %>
-        <%= button_tag('退勤', name: 'taikin') %>
+        <%= button_tag('出勤', name: 'syukkin', class: 'btn btn-info') %>
+        <%= button_tag('退勤', name: 'taikin', class: 'btn btn-info')%>
       </div>
     </div>
     <%= form_with url: attendance_path(@current_user.id) ,
@@ -30,7 +32,7 @@
       <input type='hidden' name='select_year' value='<%= @select_date.year.to_i %>'>
       <input type='hidden' name='select_month' value='<%= @select_date.month.to_i %>'>      
       <div class='attend-save'>
-        <%= button_tag('保存', name: 'attend_save' ) %>
+        <%= button_tag('保存', name: 'attend_save', class: 'btn btn-success' ) %>
       </div>
       <%= render :partial => 'templates/attendance_table', :locals => {form: f} %>
    <% end %>
