管理者用selectbox追加

--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -2,9 +2,26 @@
   <body>
     <h1>勤怠状況一覧</h1>
     <div class="search">
+      <%# 管理者ならユーザー一覧を表示 %>
+      <% if @current_user.role == 'owner' %>
+        <%= form_with url: attendance_path(@current_user.id), method: :get do |form| %>
+          <input type='hidden' name='select_year' value='<%= @select_date.year.to_i %>'>
+          <input type='hidden' name='select_month' value='<%= @select_date.month.to_i %>'>
+          <div class='search-user'>
+          UserChange
+          <%= select_tag('select_user', 
+              options_for_select(@user_all ,
+                      class:'opt_user',
+                      selected: @selected_user),
+              :onchange => 'this.form.submit();',
+              class: 'form-control-sm') %>
+          </div>
+        <% end %>
+      <% end %>
       <div class="search-year">
         <div id="pulldown">
           <%= form_with url: attendance_path(@current_user.id), method: :get do |form| %>
+            <input type='hidden' name='select_user' value='<%= @selected_user[1] %>' >
             <%= select_tag('select_year', 
                 options_for_select(show_years_map ,
                         class:'opt_year',
@@ -23,12 +40,13 @@
     </div>
     <div class='search-rightend'>
       <div class='inputtime'>
-        <%= button_tag('出勤', name: 'syukkin', class: 'btn btn-info') %>
-        <%= button_tag('退勤', name: 'taikin', class: 'btn btn-info')%>
+        <%= button_tag('出勤', name: 'syukkin', class: 'btn btn-success') %>
+        <%= button_tag('退勤', name: 'taikin', class: 'btn btn-success')%>
       </div>
     </div>
     <%= form_with url: attendance_path(@current_user.id) ,
       method: 'patch', local: true, class: 'save-button' do |f| %>
+      <input type='hidden' name='select_user' value='<%= @selected_user[1] %>' >
       <input type='hidden' name='select_year' value='<%= @select_date.year.to_i %>'>
       <input type='hidden' name='select_month' value='<%= @select_date.month.to_i %>'>      
       <div class='attend-save'>
