--- a/app/frontend/src/stylesheets/application.scss
+++ b/app/frontend/src/stylesheets/application.scss
@@ -12,8 +12,10 @@ body {
   height: 150%;
 }
 body {
-  font-size: 20px;
+  // font-size: 20px;
   line-height: 1.4;
+  font-size: 15px;
+  background-color: #cdf0f7;
 }
 .row{
   height: 100%;
