ユーザー設定の実装

--- a/app/frontend/src/stylesheets/users.scss
+++ b/app/frontend/src/stylesheets/users.scss
@@ -23,9 +23,9 @@ color: #5B5B5B;
   text-align:end;
   }
 }
-.edit{
-  background-color: rgb(167, 255, 196);
-}
+// .edit{
+//   background-color: rgb(167, 255, 196);
+// }
 .btn{
 color: #5B5B5B;
 }
