--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -45,7 +45,8 @@
               method: 'patch', local: true, class: 'save-button' do |f| %>
   <input type='hidden' name='select_user' value='<%= @selected_user[1] %>' >
   <input type='hidden' name='select_year' value='<%= @select_date.year.to_i %>'>
-  <input type='hidden' name='select_month' value='<%= @select_date.month.to_i %>'>      
+  <input type='hidden' name='select_month' value='<%= @select_date.month.to_i %>'>
+  <input type='hidden' name='change_rows' value='' >
   <div class='attend-save'>
     <%= button_tag('保存', name: 'attend_save', class: 'btn btn-success' ) %>
   </div>
