--- a/app/views/templates/_attendance_table.html.erb
+++ b/app/views/templates/_attendance_table.html.erb
@@ -24,7 +24,7 @@
           <th name='end_work_<%=row%>'>
             <%= show_end_attendanceTime(@attendance_row,row) %>
           </th>
-          <td>
+          <th name='status_row_<%=row%>'>
             <%= select_tag("status_#{row}",
                 options_for_select(work_status,
                 :selected => selected_status(@attendance_row,row)),
