sidebarをlink_toに置き換え

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,26 +22,17 @@
             </ul>
           </div>
           <div class="list-group">
-            <a href="/attendances/<%=@current_user.id%>" class="list-group-item list-group-item-action list-group-item-light">出勤状況一覧
+            <%= link_to '勤怠状況一覧', attendance_path(@current_user.id),class: 'list-group-item list-group-item-action list-group-item-light' %>
+            <%= link_to '出勤者リスト', users_path, class: 'list-group-item list-group-item-action list-group-item-light'%>
+            <%= link_to holiday_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' do %>
+              有給休暇申請
               <span class="badge badge-primary badge-pill"></span>
-            </a>
-            <a href="/users/" class="list-group-item list-group-item-action list-group-item-light">出勤者リスト
-              <span class="badge badge-primary badge-pill"></span>
-            </a>
-            <a href="/holidays/<%=@current_user.id%>" class="list-group-item list-group-item-action list-group-item-light">有休休暇申請
-              <span class="badge badge-primary badge-pill"></span>
-            </a>
-            <a href="/users/<%=@current_user.id%>/edit" class="list-group-item list-group-item-action list-group-item-light">ユーザー設定
-              <span class="badge badge-primary badge-pill"></span>
-            </a>
+            <%end%>
+            <%= link_to 'ユーザー設定', edit_user_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' %>
             <% if @current_user.role == 'owner' %>
-            <a href="/users/<%=@current_user.id%>" class="list-group-item list-group-item-action list-group-item-light">ユーザー管理
-              <span class="badge badge-primary badge-pill"></span>
-            </a>
+              <%= link_to 'ユーザー管理', user_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light'%>
             <% end %>
-            <a href="/sessions/new" class="list-group-item list-group-item-action list-group-item-light">ログアウト
-              <span class="badge badge-primary badge-pill"></span>
-            </a>
+            <%= link_to 'ログアウト', new_session_path, class: 'list-group-item list-group-item-action list-group-item-light'%>
           </div>
         </div>
         <%= render partial: "templates/flash",locals: {class_name: "flash-login"} %>
