--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1>ユーザー管理</h1>
+<%= button_tag '新規作成', name: 'user_new', class: 'btn btn-info' %>
+<%= render :partial => "templates/user_ management_table"%>
+
