--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             <%end%>
             <%= link_to 'ユーザー設定', edit_user_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' %>
             <% if @current_user.role == 'owner' %>
-              <%= link_to 'ユーザー管理', user_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light'%>
+              <%= link_to 'ユーザー管理',user_managements_path , method: 'get', class: 'list-group-item list-group-item-action list-group-item-light'%>
             <% end %>
             <%= link_to 'ログアウト', new_session_path, class: 'list-group-item list-group-item-action list-group-item-light'%>
           </div>
