--- a/app/frontend/src/stylesheets/user_managements.scss
+++ b/app/frontend/src/stylesheets/user_managements.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the user_managements controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// .user-name{
+//   height: 100%;
+// }
+
+.user-name{
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+}
