--- a/app/views/templates/_user_management_table.html.erb
+++ b/app/views/templates/_user_management_table.html.erb
@@ -1,4 +1,4 @@
-<table class='table table-bordered table-light table-hover table-sm'>
+<table class='table table-bordered  table-striped table-success table-hover table-sm'>
   <thead>
     <tr class='text-center align-middle'>
       <th>id</th>
@@ -9,12 +9,12 @@
   </thead>
   <tbody>
     <% @all_user.each do |user| %>
-      <tr class='text-center '>
+      <tr class='text-center'>
         <%= form_with url: edit_user_management_path(user.id), method: 'get',local: true do |f| %>
           <td class='align-middle'>
             <%= user.id %>
           </td>
-          <td class='align-middle'>
+          <td class='align-middle user-name'>
             <%= link_to user.name, edit_user_management_path(user.id), class: 'list-group' %>
           </td>
           <td class='align-middle'>
