--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,10 @@
 <div class='container'>
   <div class='edit'>
     <h1>ユーザー設定</h1>
-    <%= form_with url: user_path(@current_user.id) , method: :put, local: true do |form| %>
+    <%= form_with model: @user, url: user_path(@current_user.id) , method: :put, local: true do |form| %>
     <div class='edit item'>
       <%= form.label :page, '名前' %>
-      <%= text_field :page, :name %>
+      <%= text_field :page, :name, value: @user.name %>
     </div>
     <div class='esit item'>
       <%= form.label :page , '古いパスワード' %>
