[WIP]tableの位置と色合いの調整

--- a/app/frontend/src/stylesheets/user_managements.scss
+++ b/app/frontend/src/stylesheets/user_managements.scss
@@ -5,10 +5,12 @@
 // .user-name{
 //   height: 100%;
 // }
-
-.user-name{
-  padding-top: 0px;
-  padding-bottom: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
+.user-management-table{
+  margin-top: 10px;
 }
+// .item-id{
+//   width: 20px;
+// }
+// .item-del{
+//   width: 70px;
+// }
