--- a/app/frontend/src/stylesheets/application.scss
+++ b/app/frontend/src/stylesheets/application.scss
@@ -3,7 +3,7 @@
 html,
 body {
   // background-color: #B2E2EC;
-  background-color: #cdf0f7;
+  background-color: #00e5ff;
   position: relative;
   color: #5B5B5B;
   min-height: 100%;
@@ -14,11 +14,11 @@ body {
   // font-size: 20px;
   line-height: 1.4;
   font-size: 15px;
-  background-color: #cdf0f7;
+  background-color: #00e5ff;
 }
 
 .wrapper-login{
-  background-color: #cdf0f7;
+  background-color: #00e5ff;
 }
 
 .wrapper-login {
@@ -41,7 +41,7 @@ body {
   display: block;
   min-height: 100%;
   // height: calc(100% - 250px);
-  background-color: #5bd878;
+  background-color: #8bc34a;
   min-width: 250px;
   max-width: 250px;
   .sidebar-header {
@@ -50,7 +50,7 @@ body {
     margin-bottom: 8px;
   }
   .sidebar-header.header-cover {
-    background-color: #aadbb6;
+    background-color: #c6ff00;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
