sidebar_headerの大文字化を解消

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
         <div class="col-sm-3 sidebar open">
           <div class="row sidebar-header header-cover" >
             <ul class="col-md-7 user-profile">
-              <li class="profile-profile"><%= label :page ,'プロフィール' %></li>
-              <li class="profile-username"><%= label :page ,@current_user.name %></li>
-              <li class="profile-email"><%= label :page ,@current_user.email %></li>
-              <li class="profile-holidaycount">残有休数: <%= label :page ,@current_user.paid_holiday_count %></li>
+              <li class="profile-profile"><%= 'プロフィール' %></li>
+              <li class="profile-username"><%= @current_user.name %></li>
+              <li class="profile-email"><%= @current_user.email %></li>
+              <li class="profile-holidaycount">残有休数: <%= @current_user.paid_holiday_count %></li>
             </ul>
           </div>
           <div class="list-group">
