有休承認画面を作成

--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Holidays#show</h1>
-<p>Find me in app/views/holidays/show.html.erb</p>
+<h1>有給休暇申請</h1>
+<%= render :partial => 'templates/paid_vacation_table' %>
