--- a/app/frontend/src/stylesheets/application.scss
+++ b/app/frontend/src/stylesheets/application.scss
@@ -1,9 +1,8 @@
 @import '~bootstrap/dist/css/bootstrap';
+// TODO 色合いを直す
 
 html,
 body {
-  // background-color: #B2E2EC;
-  background-color: #00e5ff;
   position: relative;
   color: #5B5B5B;
   min-height: 100%;
@@ -11,14 +10,12 @@ body {
   height: 150%;
 }
 body {
-  // font-size: 20px;
   line-height: 1.4;
   font-size: 15px;
-  background-color: #00e5ff;
+  // TODO 背景色の設定 白〜薄灰色
 }
 
 .wrapper-login{
-  background-color: #00e5ff;
 }
 
 .wrapper-login {
@@ -40,8 +37,7 @@ body {
   position: fixed;
   display: block;
   min-height: 100%;
-  // height: calc(100% - 250px);
-  background-color: #8bc34a;
+  background-color: #B2E2EC;
   min-width: 250px;
   max-width: 250px;
   .sidebar-header {
@@ -50,7 +46,7 @@ body {
     margin-bottom: 8px;
   }
   .sidebar-header.header-cover {
-    background-color: #c6ff00;
+    background-color: #00e5ff;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -78,7 +74,7 @@ body {
   vertical-align: middle;
   position: absolute;
   padding: 0px 0px;
- .profile-profile ,.profile-username,.profile-userid,.profile-email{
+  .profile-profile ,.profile-username,.profile-userid,.profile-email{
     text-align: left;
   }
 }
