--- a/app/views/templates/_attendance_table.html.erb
+++ b/app/views/templates/_attendance_table.html.erb
@@ -1,5 +1,5 @@
 <div class="table">
-  <table id="attendance-table" class='table table-condensed table-hover table-bordered table-sm' >
+  <table id="attendance-table" class='table table-condensed table-bordered table-sm' >
     <thead class='thead-light'>
       <tr class='text-center'>
         <th><%= label :page, '日付'%></th>
