--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="main">
+  <div class="main bg-dark text-light">
     <div class="login-form">
       <h1>新規登録</h1>
       <%= form_with model: @user, url: users_path ,method: :post , local: true do |form| %>
