--- a/app/views/templates/_input.html.erb
+++ b/app/views/templates/_input.html.erb
@@ -1,9 +1,9 @@
 <div class='main item'>
-  <%= f.label :page, 'email' %> 
+  <%= f.label :page, 'email', class: 'text-light' %> 
   <%= f.email_field :email %>
 </div>
 <div class='main item'>
-  <%= f.label :page,  'password' %>
+  <%= f.label :page, 'password', class: 'text-light' %>
   <%= f.password_field :password %>
 </div>
 <%= render :partial => "templates/errmessage"%>
