--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,18 @@
           <div class="list-group">
             <%= link_to '勤怠状況一覧', attendance_path(@current_user.id),class: 'list-group-item list-group-item-action list-group-item-light' %>
             <%= link_to '出勤者リスト', users_path, class: 'list-group-item list-group-item-action list-group-item-light'%>
-            <%= link_to holiday_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' do %>
-              有給休暇申請
-              <span class="badge badge-primary badge-pill"></span>
-            <%end%>
+            <% if @current_user.role == 'owner' %>
+              <%= link_to edit_holiday_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' do %>
+                有給休暇申請
+                <span class="badge badge-primary badge-pill"></span>
+              <%end%>
+            <%# TODO 実装し次第表示を分割させる %>
+            <%# <% else %> 
+              <%= link_to holiday_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' do %>
+                有給申請確認
+                <span class="badge badge-primary badge-pill"></span>
+              <%end%>
+            <% end %>
             <%= link_to 'ユーザー設定', edit_user_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' %>
             <% if @current_user.role == 'owner' %>
               <%= link_to 'ユーザー管理',user_managements_path , method: 'get', class: 'list-group-item list-group-item-action list-group-item-light'%>
