--- a/app/views/holidays/_edit_paid_vacation_table.html.erb
+++ b/app/views/holidays/_edit_paid_vacation_table.html.erb
@@ -12,13 +12,13 @@
   <% for row in @applying_vacation do %>
     <%= form_with url: holiday_path(@current_user.id), method: 'patch', local: true do %>
     <tr>
-      <input type='hidden' value="<%=row.get_start_date%>">
-      <input type='hidden' value="<%=row.applicant_id%>">
+      <input type='hidden' name='get_date' value="<%=row.get_start_date%>">
+      <input type='hidden' name='user_id' value="<%=row.applicant_id%>">
       <th><%= row.get_start_date%></th>
       <th><%= row.name %></th>
       <th><%= row.get_days %></th>
-      <th><%= button_tag '許可', name:'btn-approve', class:'btn btn-success' %></th>
-      <th><%= button_tag '却下', name:'btn-dismiss', class:'btn btn-danger' %></th>
+      <th><%= button_tag '許可', name:'approve', class:'btn btn-success' %></th>
+      <th><%= button_tag '却下', name:'dismiss', class:'btn btn-danger' %></th>
     </tr>
     <%end%>
   <% end %>
