--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Users#index</h1>
 <p>出勤者リスト確認画面</p>
 <p>Find me in app/views/users/index.html.erb</p>
+<%= render :partial => 'users/user_list_table' %>
