--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -39,7 +39,7 @@
     <div class='inputtime'>
       <%= button_tag('出勤', name: 'syukkin', class: 'btn btn-success') %>
       <%= button_tag('退勤', name: 'taikin', class: 'btn btn-success')%>
-      <%= button_tag('保存', name: 'attend_save', class: 'btn btn-success' ) %>
+      <%# <%= button_tag('保存', name: 'attend_save', class: 'btn btn-success' ) %>
     </div>
   </div>
   <input type='hidden' name='select_user' value='<%= @selected_user[1] %>' >
