--- a/app/views/holidays/_edit_paid_vacation_table.html.erb
+++ b/app/views/holidays/_edit_paid_vacation_table.html.erb
@@ -14,6 +14,7 @@
     <tr>
       <input type='hidden' name='get_date' value="<%=row.get_start_date%>">
       <input type='hidden' name='user_id' value="<%=row.applicant_id%>">
+      <input type='hidden' name='button' value=''>
       <th><%= row.get_start_date%></th>
       <th><%= row.name %></th>
       <th><%= row.get_days %></th>
