レビュー対応

--- a/app/views/holidays/_show_paid_vacation_table.html.erb
+++ b/app/views/holidays/_show_paid_vacation_table.html.erb
@@ -7,7 +7,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @my_vacation.each do |row| %>
+    <% @my_vacations.each do |row| %>
       <tr>
         <th><%= row.get_start_date %></th>
         <th><%= row.get_days %></th>
