いくつかのTODOを解消

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
       <%= form.password_field :new_password2 %>
     </div>
     <%= render :partial => "templates/errmessage"%>
-      <%= form.submit '保存', class: 'btn btn-default'%>
+      <%= form.submit '保存', class: 'btn btn-success'%>
     <% end %>
   </div>
 </div>
