--- a/app/views/templates/_errmessage.html.erb
+++ b/app/views/templates/_errmessage.html.erb
@@ -4,8 +4,8 @@
       <%= message %>
     </div>
   <% end %>
-<% elsif @error_messages %>
+<% elsif @error_message %>
   <div class='error_message'>
-    <%= @error_messages %>
+    <%= @error_message %>
   </div>
 <% end %>
