--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,8 +3,11 @@
     <div class="login-form">
       <h1>新規登録</h1>
       <%= form_with model: @user, url: users_path ,method: :post , local: true do |form| %>
+        <div class='main item'>
+          <%= form.label :page, 'name', class: 'text-light' %>
+          <%= form.text_field :name, maxlength: 20 %>
+        </div>
         <%= render :partial => "templates/input", :locals => {f: form}%>
-        <%# TODO:ユーザー名の入力 デフォルト値の設定 %>
         <%= form.submit "新規登録" , class: "btn btn-default" %>
       <% end %>
     </div>
