--- a/app/views/user_managements/_user_management_table.html.erb
+++ b/app/views/user_managements/_user_management_table.html.erb
@@ -9,7 +9,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @all_user.each do |user| %>
+      <% @all_users.each do |user| %>
         <tr class='text-center'>
           <%= form_with url: edit_user_management_path(user.id), method: 'get',local: true do |f| %>
             <td class='align-middle item-id col-md-01 col-sm-01'>
